tests/sksl/errors/Ossfuzz44045.glsl
### Compilation failed:

error: 1: value is out of range for type 'int': 3976000000
int[int3(half3(int3(half3(662666666.*6))))[1]] x;
               ^^^^^^^^^^^^^^^^^^^^^^^^^
error: 1: array size must be positive
int[int3(half3(int3(half3(662666666.*6))))[1]] x;
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 errors
